After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787194 - pango/pangofc-shape.c:215]: (warning) Redundant assignment ?
pango/pangofc-shape.c:215]: (warning) Redundant assignment ?
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2017-09-02 19:58 UTC by dcb
Modified: 2017-09-18 17:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description dcb 2017-09-02 19:58:30 UTC
../pango/pangofc-shape.c:215]: (warning) Redundant assignment of '*y' to itself.

Source code is

  *x = -*x;
  *y =  *y;
Comment 1 Behdad Esfahbod 2017-09-18 17:03:44 UTC
Fixed.  Thanks.