Fix warning

https://bugzilla.gnome.org/show_bug.cgi?id=787194